<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>SilkSpawners_v2</artifactId>
        <groupId>de.corneliusmay</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>SilkSpawners_v2-Plugin</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.0.0</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>de.corneliusmay</groupId>
            <artifactId>SilkSpawners_v2-v1_8_R3</artifactId>
            <version>v1_8_R3</version>
            <type>jar</type>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>de.corneliusmay</groupId>
            <artifactId>SilkSpawners_v2-v1_9_R2</artifactId>
            <version>v1_9_R2</version>
            <type>jar</type>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>de.corneliusmay</groupId>
            <artifactId>SilkSpawners_v2-v1_10_R1</artifactId>
            <version>v1_10_R1</version>
            <type>jar</type>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>de.corneliusmay</groupId>
            <artifactId>SilkSpawners_v2-v1_11_R1</artifactId>
            <version>v1_11_R1</version>
            <type>jar</type>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>de.corneliusmay</groupId>
            <artifactId>SilkSpawners_v2-v1_12_R1</artifactId>
            <version>v1_12_R1</version>
            <type>jar</type>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>de.corneliusmay</groupId>
            <artifactId>SilkSpawners_v2-v1_13_R2</artifactId>
            <version>v1_13_R2</version>
            <type>jar</type>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>de.corneliusmay</groupId>
            <artifactId>SilkSpawners_v2-v1_14_R1</artifactId>
            <version>v1_14_R1</version>
            <type>jar</type>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>de.corneliusmay</groupId>
            <artifactId>SilkSpawners_v2-v1_15_R1</artifactId>
            <version>v1_15_R1</version>
            <type>jar</type>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>de.corneliusmay</groupId>
            <artifactId>SilkSpawners_v2-v1_16_R3</artifactId>
            <version>v1_16_R3</version>
            <type>jar</type>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>de.corneliusmay</groupId>
            <artifactId>SilkSpawners_v2-v1_17_R1</artifactId>
            <version>v1_17_R1</version>
            <type>jar</type>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>de.corneliusmay</groupId>
            <artifactId>SilkSpawners_v2-v1_18_R2</artifactId>
            <version>v1_18_R2</version>
            <type>jar</type>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>de.corneliusmay</groupId>
            <artifactId>SilkSpawners_v2-API</artifactId>
            <version>API</version>
            <type>jar</type>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <directory>../target</directory> <!-- Build it one level up, because it is the one we care about -->
        <finalName>SilkSpawners_v2</finalName>
        <resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>src/main/resources</directory>
                <includes>
                    <include>plugin.yml</include>
                    <include>locales/*</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <relocations>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>de.corneliusmay.silkspawners.plugin</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>